Copy dell'index inserito
Co-authored-by: Leonardo Bonaventura <leo.bo96@gmail.com>

--- a/index.html
+++ b/index.html
@@ -166,13 +166,13 @@
             <div class="col-md">
               <h2 class="text-secondary">Una nuova città</h2>
               <p class="">
-                OASIS nasce dopo la disfatta del mondo. <br />L’uomo, avido e
-                sempre più desideroso del controllo, ha soffocato a poco a poco
-                il Pianeta. Noi siamo qui per proteggerti e prenderci cura di
-                te. Il nostro obiettivo principale è farti dimenticare il
-                passato e la catastrofe che ha distrutto il mondo e farti vivere
-                una nuova vita di benessere fisico e mentale. Che aspetti?
-                Unisciti a noi!
+                OASIS nasce dopo la disfatta del mondo. L’uomo, avido e sempre
+                più desideroso di controllo, ha soffocato a poco a poco il
+                Pianeta Terra. Noi siamo qui per <strong>proteggerti</strong> e
+                prenderci cura di te. ll nostro obiettivo è farti dimenticare la
+                catastrofe che ha distrutto il mondo e farti vivere una nuova
+                vita di benessere fisico e mentale,
+                <strong>lontano dal Mondo Esterno</strong>.
               </p>
               <div class="d-flex justify-content-end">
                 <a
@@ -180,7 +180,7 @@
                   class="link-secondary"
                   style="text-decoration: none"
                 >
-                  Scopri la storia di Oasis
+                  SCOPRI OASIS
                   <i class="bi-arrow-right text-primary fw-bold"></i>
                 </a>
               </div>
@@ -190,6 +190,37 @@
       </section>
 
       <!-- Storia -->
+      <section>
+        <div class="container py-5">
+          <div class="row align-items-center gy-5 gx-5">
+            <div class="col-md">
+              <h2 class="text-secondary">Le nostre origini</h2>
+              <p class="">
+                Lo sapevi che OASIS è stata pensata più di
+                <strong>trent'anni fa</strong> da delle menti illuminate e
+                avveniristiche? Scopri insieme a noi come è nato l’ambizioso
+                progetto di <strong>salvare l’Umanità</strong> dal Mondo
+                Esterno.
+              </p>
+              <div class="d-flex justify-content-end">
+                <a
+                  href="storia.html"
+                  class="link-secondary"
+                  style="text-decoration: none"
+                >
+                  LEGGI LA NOSTRA STORIA
+                  <i class="bi-arrow-right text-primary fw-bold"></i>
+                </a>
+              </div>
+            </div>
+            <div class="col-md text-center">
+              <img src="./img/placeholder-img.png" alt="" />
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- Storia
       <section>
         <div class="container py-5">
           <h2 class="text-secondary">Scopri i quartieri di Oasis</h2>
@@ -284,22 +315,12 @@
             </a>
           </div>
         </div>
-      </section>
+      </section> -->
 
       <!-- Servizi -->
       <section class="bg-secondary-variant1">
         <div class="container text-light p-5">
-          <div class="text-nowrap overflow-auto composition-servizi">
-            <img
-              class="d-inline-block img-fluid"
-              src="./img/placeholder-img.png"
-              alt=""
-            />
-            <img
-              class="d-inline-block img-fluid"
-              src="./img/placeholder-img.png"
-              alt=""
-            />
+          <div class="composition-servizi">
             <img
               class="d-inline-block img-fluid"
               src="./img/placeholder-img.png"
@@ -315,16 +336,16 @@
           <div class="d-flex flex-column align-items-center">
             <h2 class="align-self-md-start">Servizi unici al mondo</h2>
             <p class="align-self-md-start">
-              Terme e Università ecco perché dovresti scegliere noi. Siamo
-              differenti dalle altre città-stato.
+              Benessere e Formazione ecco perché dovresti sceglierci. Siamo
+              l’unica città al mondo ad offrirteli
             </p>
           </div>
 
           <div class="d-flex align-items-center">
             <i class="bi-arrow-right fw-bold p-3"></i>
             <div>
-              <h3>Istruzione</h3>
-              <p>Sfoglia la nostra offerta formativa</p>
+              <h3>Formazione</h3>
+              <p>Sfoglia la nostra offerta di scuole</p>
             </div>
           </div>
 
@@ -332,12 +353,14 @@
             <i class="bi-arrow-right fw-bold p-3"></i>
             <div>
               <h3>Benessere</h3>
-              <p>Esplora i nostri servizi termali</p>
+              <p>Esplora i nostri servizi termali e farmacologici</p>
             </div>
           </div>
 
           <div class="d-flex justify-content-center justify-content-md-start">
-            <a href="servizi.html" class="btn btn-primary">Scopri</a>
+            <a href="servizi.html" class="btn btn-primary"
+              >Scopri tutti i servizi</a
+            >
           </div>
         </div>
       </section>
@@ -354,8 +377,8 @@
                 <div class="position-relative">
                   <img src="img/placeholder-img.png" alt="" class="card-img" />
                   <div class="card-img-overlay">
-                    <h3 class="card-title">La tua arte</h3>
-                    <p class="card-text small">Tutti i giorni</p>
+                    <h3 class="card-title">Sorgente di vita</h3>
+                    <p class="card-text small">Venerdì 17 novembre</p>
                   </div>
                 </div>
               </div>
@@ -366,8 +389,8 @@
                 <div class="position-relative">
                   <img src="img/placeholder-img.png" alt="" class="card-img" />
                   <div class="card-img-overlay">
-                    <h3 class="card-title">La tua arte</h3>
-                    <p class="card-text small">Tutti i giorni</p>
+                    <h3 class="card-title">Cinema d'autore</h3>
+                    <p class="card-text small">Sabato 2 dicembre</p>
                   </div>
                 </div>
               </div>
@@ -378,8 +401,8 @@
                 <div class="position-relative">
                   <img src="img/placeholder-img.png" alt="" class="card-img" />
                   <div class="card-img-overlay">
-                    <h3 class="card-title">La tua arte</h3>
-                    <p class="card-text small">Tutti i giorni</p>
+                    <h3 class="card-title">Preghiamo insieme</h3>
+                    <p class="card-text small">Ogni domenica</p>
                   </div>
                 </div>
               </div>
