--- a/index.html
+++ b/index.html
@@ -326,47 +326,54 @@
       <!-- Servizi -->
       <section class="bg-secondary-variant1">
         <div class="container text-light p-5">
-          <div class="composition-servizi">
-            <img
-              class="d-inline-block img-fluid"
-              src="./img/placeholder-img.png"
-              alt=""
-            />
-            <img
-              class="d-inline-block img-fluid"
-              src="./img/placeholder-img.png"
-              alt=""
-            />
-          </div>
-
-          <div class="d-flex flex-column align-items-center">
-            <h2 class="align-self-md-start">Servizi unici al mondo</h2>
-            <p class="align-self-md-start">
-              Benessere e Formazione ecco perché dovresti sceglierci. Siamo
-              l’unica città al mondo ad offrirteli
-            </p>
-          </div>
-
-          <div class="d-flex align-items-center">
-            <i class="bi-arrow-right fw-bold p-3"></i>
-            <div>
-              <h3>Formazione</h3>
-              <p>Sfoglia la nostra offerta di scuole</p>
+          <div
+            class="
+              row
+              gy-5 gy-md-0
+              gx-md-5
+              align-items-center
+              justify-content-between
+            "
+          >
+            <div class="col-lg-6">
+              <div class="h-100 bg-primary composition-servizi">
+                <img class="img-fluid" src="./img/placeholder-img.png" alt="" />
+                <img class="img-fluid" src="./img/placeholder-img.png" alt="" />
+              </div>
             </div>
-          </div>
+            <div class="col-lg-5">
+              <div class="d-flex flex-column align-items-center">
+                <h2 class="align-self-md-start">Servizi unici al mondo</h2>
+                <p class="align-self-md-start">
+                  Benessere e Formazione ecco perché dovresti sceglierci. Siamo
+                  l’unica città al mondo ad offrirteli
+                </p>
+              </div>
 
-          <div class="d-flex align-items-center">
-            <i class="bi-arrow-right fw-bold p-3"></i>
-            <div>
-              <h3>Benessere</h3>
-              <p>Esplora i nostri servizi termali e farmacologici</p>
+              <div class="d-flex align-items-center">
+                <i class="bi-arrow-right fw-bold p-3"></i>
+                <div>
+                  <h3>Formazione</h3>
+                  <p>Sfoglia la nostra offerta di scuole</p>
+                </div>
+              </div>
+
+              <div class="d-flex align-items-center">
+                <i class="bi-arrow-right fw-bold p-3"></i>
+                <div>
+                  <h3>Benessere</h3>
+                  <p>Esplora i nostri servizi termali e farmacologici</p>
+                </div>
+              </div>
+
+              <div
+                class="d-flex justify-content-center justify-content-md-start"
+              >
+                <a href="servizi.html" class="btn btn-primary"
+                  >Scopri tutti i servizi</a
+                >
+              </div>
             </div>
-          </div>
-
-          <div class="d-flex justify-content-center justify-content-md-start">
-            <a href="servizi.html" class="btn btn-primary"
-              >Scopri tutti i servizi</a
-            >
           </div>
         </div>
       </section>
