--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@
               justify-content-between
             "
           >
-            <div class="col-lg-6">
+            <div class="col-lg-6 h-100">
               <div class="h-100 bg-primary composition-servizi">
                 <img class="img-fluid" src="./img/placeholder-img.png" alt="" />
                 <img class="img-fluid" src="./img/placeholder-img.png" alt="" />
