added images to servizi in home

--- a/index.html
+++ b/index.html
@@ -335,10 +335,14 @@
               justify-content-between
             "
           >
-            <div class="col-lg-6 h-100">
-              <div class="h-100 bg-primary composition-servizi">
-                <img class="img-fluid" src="./img/placeholder-img.png" alt="" />
-                <img class="img-fluid" src="./img/placeholder-img.png" alt="" />
+            <div class="col-lg-6">
+              <div class="bg-primary composition-servizi clearfix">
+                <img class="img-fluid float-start" src="./img/3.jpg" alt="" />
+                <img
+                  class="img-fluid float-end"
+                  src="./img/placeholder-img.png"
+                  alt=""
+                />
               </div>
             </div>
             <div class="col-lg-5">
