--- a/formazione.html
+++ b/formazione.html
@@ -140,7 +140,7 @@
     <main>
       <section
         class="hero d-flex justify-content-center align-items-center"
-        id="hero-home"
+        id="hero-formazione"
       >
         <div class="hero-content text-light text-center">
           <h1 class="display-1">Oasis</h1>
