--- a/benessere.html
+++ b/benessere.html
@@ -142,7 +142,7 @@
     <main>
       <section
         class="hero d-flex justify-content-center align-items-center"
-        id="hero-home"
+        id="hero-benessere"
       >
         <div class="hero-content text-light text-center">
           <h1 class="display-1">Oasis</h1>
