--- a/unisciti.html
+++ b/unisciti.html
@@ -145,7 +145,7 @@
     <main>
       <section
         class="hero d-flex align-items-center justify-content-start"
-        id="hero-home"
+        id="hero-unisciti"
       >
         <div class="hero-content bg-primary p-4 ps-5 text-light w-75">
           <h1 class="visually-hidden">Unisciti a noi</h1>
