Refactored some unused classes

--- a/index.html
+++ b/index.html
@@ -151,13 +151,12 @@
             justify-content-center
             align-items-center
             text-light text-center
-            bg-opacity-50
           "
         >
           <h1 class="display-1">Oasis</h1>
           <h2 class="lead">La culla del tuo futuro</h2>
           <div>
-            <button class="btn btn-secondary mt-3">Unisciti a noi</button>
+            <button class="btn btn-primary mt-3">Unisciti a noi</button>
           </div>
         </div>
       </section>
@@ -170,7 +169,7 @@
               <img src="./img/placeholder-img.png" alt="" />
             </div>
             <div class="col-md">
-              <h2 class="text-secondary">Una nuova città</h2>
+              <h2 class="">Una nuova città</h2>
               <p class="">
                 OASIS nasce dopo la disfatta del mondo. L’uomo, avido e sempre
                 più desideroso di controllo, ha soffocato a poco a poco il
@@ -183,7 +182,7 @@
               <div class="text-end">
                 <a href="descrizione.html" class="small-caps link-secondary">
                   Scopri Oasis
-                  <i class="bi-arrow-right text-primary fw-bold"></i>
+                  <i class="bi-arrow-right  fw-bold"></i>
                 </a>
               </div>
             </div>
@@ -196,7 +195,7 @@
         <div class="container py-5">
           <div class="row align-items-center gy-5 gx-5">
             <div class="col-md">
-              <h2 class="text-secondary">Le nostre origini</h2>
+              <h2 class="">Le nostre origini</h2>
               <p class="">
                 Lo sapevi che OASIS è stata pensata più di
                 <strong>trent'anni fa</strong> da delle menti illuminate e
@@ -207,7 +206,7 @@
               <div class="d-flex justify-content-end">
                 <a href="storia.html" class="small-caps link-secondary">
                   Leggi la nostra storia
-                  <i class="bi-arrow-right text-primary fw-bold"></i>
+                  <i class="bi-arrow-right  fw-bold"></i>
                 </a>
               </div>
             </div>
@@ -322,7 +321,7 @@
           <div class="text-end">
             <a href="eventi.html" class="small-caps link-secondary"
               >Scopri gli ultimi eventi
-              <i class="bi-arrow-right text-primary fw-bold"></i>
+              <i class="bi-arrow-right  fw-bold"></i>
             </a>
           </div>
         </div>
@@ -334,7 +333,7 @@
           <div class="d-flex flex-column align-items-center">
             <h2 class="text-light">Entra in Oasis</h2>
             <p class="text-light py-3">Cosa aspetti?</p>
-            <a href="unisciti.html" class="btn btn-secondary">
+            <a href="unisciti.html" class="btn btn-primary">
               Unisciti a noi
             </a>
           </div>
@@ -413,7 +412,7 @@
 <!-- Storia
       <section>
         <div class="container py-5">
-          <h2 class="text-secondary">Scopri i quartieri di Oasis</h2>
+          <h2 class="">Scopri i quartieri di Oasis</h2>
           <div class="container py-4">
             <div class="row g-3">
               <div
@@ -501,7 +500,7 @@
               
               class="link-secondary"
               >Scopri i quartieri di Oasis
-              <i class="bi-arrow-right text-primary fw-bold"></i>
+              <i class="bi-arrow-right  fw-bold"></i>
             </a>
           </div>
         </div>
