added class bg-light-gray

--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
               <div class="text-end">
                 <a href="descrizione.html" class="small-caps link-secondary">
                   Scopri Oasis
-                  <i class="bi-arrow-right  fw-bold"></i>
+                  <i class="bi-arrow-right fw-bold"></i>
                 </a>
               </div>
             </div>
@@ -206,7 +206,7 @@
               <div class="d-flex justify-content-end">
                 <a href="storia.html" class="small-caps link-secondary">
                   Leggi la nostra storia
-                  <i class="bi-arrow-right  fw-bold"></i>
+                  <i class="bi-arrow-right fw-bold"></i>
                 </a>
               </div>
             </div>
@@ -218,7 +218,7 @@
       </section>
 
       <!-- Servizi -->
-      <section class="">
+      <section class="bg-light-gray">
         <div class="container text-light p-5">
           <div
             class="
@@ -321,7 +321,7 @@
           <div class="text-end">
             <a href="eventi.html" class="small-caps link-secondary"
               >Scopri gli ultimi eventi
-              <i class="bi-arrow-right  fw-bold"></i>
+              <i class="bi-arrow-right fw-bold"></i>
             </a>
           </div>
         </div>
@@ -333,9 +333,7 @@
           <div class="d-flex flex-column align-items-center">
             <h2 class="text-light">Entra in Oasis</h2>
             <p class="text-light py-3">Cosa aspetti?</p>
-            <a href="unisciti.html" class="btn btn-primary">
-              Unisciti a noi
-            </a>
+            <a href="unisciti.html" class="btn btn-primary"> Unisciti a noi </a>
           </div>
         </div>
       </section>
