--- a/descrizione.html
+++ b/descrizione.html
@@ -139,7 +139,21 @@
       </div>
     </header>
 
-    
+    <main>
+      <section
+        class="hero d-flex align-items-center justify-content-start"
+        id="hero-unisciti"
+      >
+        <div class="hero-content bg-primary p-4 ps-5 text-light w-75">
+          <h1 class="visually-hidden">Unisciti a noi</h1>
+          <h2 class="h1">Ti senti cittadino di Oasis?</h2>
+          <h3 class="lead">
+            Scopri gli step necessari per entrare a far parte dell'èlite del
+            Nuovo Mondo
+          </h3>
+        </div>
+      </section>
+    </main>
 
     <footer class="bg-secondary px-5">
       <!-- Logo -->
