--- a/eventi.html
+++ b/eventi.html
@@ -27,7 +27,7 @@
     >
       <div class="container-fluid">
         <!-- Logo -->
-        <a href="" class="mx-3 navbar_brand">
+        <a href="./index.html" class="mx-3 navbar_brand">
           <svg
             width="32"
             height="32"
