--- a/index.html
+++ b/index.html
@@ -191,9 +191,12 @@
       </section>
 
       <!-- Storia -->
-      <section>
+      <section class="bg-primary">
         <div class="container py-5">
-          <div class="row align-items-center gy-5 gx-5">
+          <div class="row flex-md-row-reverse align-items-center gy-5 gx-5">
+            <div class="col-md text-center">
+              <img src="./img/placeholder-img.png" alt="" />
+            </div>
             <div class="col-md">
               <h2 class="">Le nostre origini</h2>
               <p class="">
@@ -210,16 +213,13 @@
                 </a>
               </div>
             </div>
-            <div class="col-md text-center">
-              <img src="./img/placeholder-img.png" alt="" />
-            </div>
           </div>
         </div>
       </section>
 
       <!-- Servizi -->
       <section class="bg-light-gray">
-        <div class="container text-light p-5">
+        <div class="container p-5">
           <div
             class="
               row
@@ -251,7 +251,7 @@
               <div class="d-flex align-items-center">
                 <i class="bi-arrow-right fw-bold p-3"></i>
                 <div>
-                  <h3>Formazione</h3>
+                  <h3 class="lead">Formazione</h3>
                   <p>Sfoglia la nostra offerta di scuole</p>
                 </div>
               </div>
@@ -259,7 +259,7 @@
               <div class="d-flex align-items-center">
                 <i class="bi-arrow-right fw-bold p-3"></i>
                 <div>
-                  <h3>Benessere</h3>
+                  <h3 class="lead">Benessere</h3>
                   <p>Esplora i nostri servizi termali e farmacologici</p>
                 </div>
               </div>
