--- a/benessere.html
+++ b/benessere.html
@@ -141,13 +141,130 @@
 
     <main>
       <section
-        class="hero d-flex justify-content-center align-items-center"
+        class="hero d-flex align-items-center justify-content-start"
         id="hero-benessere"
       >
-        <div class="hero-content text-light text-center">
-          <h1 class="display-1">Oasis</h1>
-          <h2 class="lead">La culla del tuo futuro</h2>
-          <button class="btn btn-primary mt-3">Unisciti a noi</button>
+        <div class="hero-content bg-primary p-4 ps-5 text-light w-75">
+          <h1>Servizio Benessere</h1>
+          <h2 class="lead">
+            La nostra priorità è il tuo benessere mentale. Siamo o non siamo
+            l’ultima città felice rimasta nel Pianeta Terra?
+          </h2>
+        </div>
+      </section>
+
+      <section class="bg-primary py-5">
+        <div class="container py-5">
+          <div
+            class="
+              row
+              flex-md-row-reverse
+              gy-5 gy-md-0
+              gx-md-5
+              align-items-center
+              justify-content-between
+            "
+          >
+            <div class="col-md">
+              <img class="img-fluid" src="img/Accesso_Benessere.jpg" alt="" />
+            </div>
+            <div class="col-md">
+              <h2>Accesso al servizio</h2>
+              <p>
+                Hai brutti ricordi legati al passato fuori dalla cupola? Ci sono
+                certe giornate di duro lavoro in cui fatichi a reggere la
+                stanchezza? A volte senti dolore e non sai se è fisico o
+                psicologico? Appena entrato in OASIS ti verrà assegnato uno
+                <strong>psicoterapeuta personale</strong> che seguirà e
+                monitorerà il tuo percorso psicologico costantemente con un
+                colloquio settimanale.
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="py-5">
+        <div class="container p-5">
+          <div class="mb-5">
+          <h2 class="text-center">I trattamenti</h2>
+          <p class="lead text-center ">
+            Le terapie vengono somministrate sottoforma di pacchetti 
+            a seconda se il tuo problema è risolvibile con un trattamento 
+            benessere o necessita l’intervento della nostro avveniristico 
+            settore farmacologico.
+          </p>
+          </div>
+
+          <div class="row gy-5 gy-md-0 gx-md-5 justify-content-around">
+            <div class="col-md-5 d-flex flex-column justify-content-between">
+              <div>
+                <div class="text-center">
+                <img
+                  src="img/Image1_Benessere.jpg"
+                  class="img-fluid mb-4"
+                  alt="..."
+                />
+                </div>
+                <h3>Trattamenti termali</h3>
+                <p>
+                  Un’oasi di benessere lontana dagli
+                  <strong>impegni quotidiani</strong> e in cui trascorrere ore
+                  di completo relax per dimenticare il mondo al di là della
+                  cupola. Una volta assegnatoti questo trattamento, potrai
+                  scegliere tra diversi pacchetti benessere: manicure, pedicure,
+                  massaggi. Ad Oasis ci prendiamo cura di te e vogliamo farti
+                  <strong>guarire</strong> da ogni preoccupazione.
+                </p>
+              </div>
+            </div>
+
+            <div class="col-md-5 d-flex flex-column justify-content-between">
+              <div>
+                <div class="text-center">
+                <img
+                  src="img/Image-Benessere2.jpg"
+                  class="img-fluid mb-4"
+                  alt="..."
+                />
+                </div>
+                <h3>Trattamenti farmacologici</h3>
+                <p>
+                  Non c’è nulla che le nostre pillole <strong>Soma</strong> non
+                  possano aggiustare. I nostri medici si attiveranno subito per
+                  capire quale prescriverti a seconda di dove è localizzato il
+                  tuo dolore. I nostri <strong>miracolosi medicinali</strong> ti
+                  faranno dimenticare ogni dolore. Ritrova la connessione con il
+                  tuo corpo e sarai libero dalle catene del passato.
+                </p>
+              </v>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="bg-light-gray py-5">
+        <div class="container p-5">
+          <h2 class="text-center pb-4">FAQ</h2>
+          <h3 class="pb-2">È a pagamento?</h3>
+          <p>
+            No, OASIS mette al primo posto la tua salute mentale e perciò sia
+            appuntamento psicologico che trattamenti associati sono totalmente
+            gratuiti.
+          </p>
+          <h3 class="pb-2">Quando?</h3>
+          <p>
+            Ogni settimana, in un giorno a tua scelta, dovrai fissare un
+            appuntamento psicologico in cui potrai parlare liberamente di
+            qualsiasi problema ti affligge. Il nostro professionista saprà
+            sicuramente darti la risposta giusta per farti stare meglio.
+          </p>
+          <h3 class="pb-2">Posso scegliere io il trattamento che preferisco?</h3>
+          <p>
+            No, ci teniamo che tu ti affidi pienamente ai nostri professionisti
+            della salute mentale, permetterti di fare una scelta così delicata
+            sarebbe rischioso per il tuo benessere sul lungo termine
+          </p>
         </div>
       </section>
     </main>
