creata pagina descrizione

--- a/descrizione.html
+++ b/descrizione.html
@@ -145,13 +145,97 @@
         id="hero-unisciti"
       >
         <div class="hero-content bg-primary p-4 ps-5 text-light w-75">
-          <h1 class="visually-hidden">Unisciti a noi</h1>
-          <h2 class="h1">Ti senti cittadino di Oasis?</h2>
-          <h3 class="lead">
-            Scopri gli step necessari per entrare a far parte dell'èlite del
-            Nuovo Mondo
-          </h3>
+          <h1>Descrizione</h1>
+          <h2 class="lead">
+            Scopri la città dove i tuoi figli cresceranno e faranno parte
+            dell’Elite che ripopolerà il Pianeta Terra
+          </h2>
         </div>
+      </section>
+
+      <section>
+        <div class="container py-5">
+          <h2 class="text-center mb-5">I quartieri</h2>
+          <div
+            class="
+              row
+              gy-5 gy-md-0
+              gx-md-5
+              align-items-center
+              justify-content-between
+              pb-5
+            "
+          >
+            <div class="col-md col-lg-5 text-center">
+              <img class="img-fluid mb-3" src="img/Image350.png" alt="" />
+            </div>
+            <div class="col-md col-lg-5">
+              <h3>Sorgensis</h3>
+              <p>
+                Sorgensis è dove tutto ha avuto inizio. Si trova nel bel mezzo
+                del deserto in prossimità della fonte che fornisce acqua a tutta
+                la città. Nel tempo sono state costruite le strutture termali,
+                dove ribilanciare il proprio stato psicofisico. Qui a Sorgensis
+                preoccupazioni e pensieri negativi spariscono immediatamente. E’
+                qui che riappacifichiamo il tuo rapporto con la Natura.
+              </p>
+            </div>
+          </div>
+
+          <div
+            class="
+              row
+              flex-md-row-reverse
+              gy-5 gy-md-0
+              gx-md-5
+              align-items-center
+              justify-content-between
+              pb-5
+            "
+          >
+            <div class="col-md col-lg-5 text-center">
+              <img class="img-fluid mb-3" src="img/Image350.png" alt="" />
+            </div>
+            <div class="col-md col-lg-5">
+              <h3>Centrisis</h3>
+              <p>
+                È il quartiere dove è collocata la vita di Oasis e dei suoi
+                cittadini. Case, uffici, servizi essenziali, accademie, locali
+                notturni. E’ qui che giorno dopo giorno diamo vita alla città
+                del futuro e ritroverai il piacere di socializzare e lavorare.
+              </p>
+            </div>
+          </div>
+
+          <div
+            class="
+              row
+              gy-5 gy-md-0
+              gx-md-5
+              align-items-center
+              justify-content-between
+            "
+          >
+            <div class="col-md col-lg-5 text-center">
+              <img class="img-fluid mb-3" src="img/Image350.png" alt="" />
+            </div>
+            <div class="col-md col-lg-5">
+              <h3>Burocrasis</h3>
+              <p>
+                È il quartiere amministrativo. È la casa della burocrazia e dove
+                ha sede la residenza del sindaco. Una zona necessaria per
+                mandare avanti la città. Nel quartiere palazzo gli eventi
+                mondani sono solo incontri formali per pensare al bene della
+                città
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section>
+        <h2 class="text-center mb-5">Dove siamo</h2>
+        <img class="img-fluid w-100" src="img/placeholder-img.png" alt="" />
       </section>
     </main>
 
