--- a/eventi.html
+++ b/eventi.html
@@ -139,210 +139,147 @@
 
     <main>
       <section
-        class="hero d-flex justify-content-center align-items-center"
+        class="hero d-flex align-items-center justify-content-start"
         id="hero-eventi"
       >
-        <div class="hero-content text-light text-center">
-          <h1 class="visually-hidden">Eventi</h1>
-          <h2 class="h1">Partecipa ai nostri eventi</h2>
-          <p class="lead">La città non è viva senza di te</p>
+        <div class="hero-content bg-primary p-4 ps-5 text-light w-75">
+          <h1>Partecipa ai nostri eventi</h1>
+          <h2 class="lead">
+            Ad Oasis non c'è tempo per annoiarsi. Offriamo eventi non-stop per
+            tutti i gusti.
+          </h2>
         </div>
       </section>
+
       <section>
         <div class="container p-5">
-          <h2 class="text-center">Scopri gli eventi in programma</h2>
-          <p class="text-center">
-            Qui da OASIS non c'è letteralmente tempo per annoiarsi. Offriamo
-            <strong>eventi non-stop</strong> per tutti i gusti: cibo, arte,
-            natura, musica, e molto altro ancora! Partecipa ad almeno cinque
-            eventi a settimana e puoi essere tra i fortunati che potranno
-            scegliere il <strong>palinsesto</strong> della settimana successiva!
-          </p>
-          <div class="container pt-3">
-            <div class="row gy-5 justify-content-center">
-              <div class="col-md-4">
-                <div class="card text-light h-100">
-                  <div class="position-relative">
-                    <img
-                      src="img/placeholder-img.png"
-                      alt=""
-                      class="card-img"
-                    />
-                    <div class="card-img-overlay">
-                      <h3 class="card-title">Dolci per tutti</h3>
-                      <p class="card-text small">Tutti i giorni</p>
-                    </div>
-                  </div>
-                  <div class="card-body d-flex flex-column text-dark">
-                    <p class="card-text flex-grow-1">
-                      Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    </p>
-                    <div><i class="bi-pin-angle-fill"></i> Via Sacher, 7</div>
-                    <div><i class="bi-watch"></i> 10:00 - 20:00</div>
-                    <button
-                      class="btn btn-primary mt-3"
-                      type="button"
-                      data-bs-toggle="modal"
-                      data-bs-target="#mymodal"
-                    >
-                      Prenota
-                    </button>
+          <div class="row gy-5 justify-content-center">
+            <div class="col-md-6">
+              <div class="card text-light h-100">
+                <div class="position-relative">
+                  <img src="img/eventi1.jpg" alt="" class="card-img" />
+                  <div class="card-img-overlay px-0">
+                    <h3 class="card-title bg-primary-alpha p-3">
+                      Sorgente di Vita
+                    </h3>
                   </div>
                 </div>
-              </div>
-              <div class="col-md-4">
-                <div class="card text-light h-100">
-                  <div class="position-relative">
-                    <img
-                      src="img/placeholder-img.png"
-                      alt=""
-                      class="card-img"
-                    />
-                    <div class="card-img-overlay">
-                      <h3 class="card-title">La tua arte</h3>
-                      <p class="card-text small">Tutti i giorni</p>
-                    </div>
+                <div class="card-body d-flex flex-column text-dark">
+                  <p class="card-text flex-grow-1">
+                    Organizziamo visite guidate per scoprire le meravigliose
+                    sorgenti di Oasis e farvi ritrovare finalmente la pace
+                    perduta con Madre Natura
+                  </p>
+                  <div><i class="bi-pin-angle-fill"></i> Via Cadens, 11</div>
+                  <div>
+                    <i class="bi-watch"></i> Venerdì 17 novembre <br />8.00 -
+                    12.00
                   </div>
-                  <div class="card-body d-flex flex-column text-dark">
-                    <p class="card-text flex-grow-1">
-                      Porta le tue opere, noi le esporremo nella galleria della
-                      città
-                    </p>
-                    <div><i class="bi-pin-angle-fill"></i> Via Monet, 3</div>
-                    <div><i class="bi-watch"></i> 10:00 - 20:00</div>
-                    <button
-                      class="btn btn-primary mt-3"
-                      type="button"
-                      data-bs-toggle="modal"
-                      data-bs-target="#mymodal"
-                    >
-                      Prenota
-                    </button>
-                  </div>
+                  <button
+                    class="btn btn-primary mt-3"
+                    type="button"
+                    data-bs-toggle="modal"
+                    data-bs-target="#mymodal"
+                  >
+                    Prenota
+                  </button>
                 </div>
               </div>
-              <div class="col-md-4">
-                <div class="card text-light h-100">
-                  <div class="position-relative">
-                    <img
-                      src="img/placeholder-img.png"
-                      alt=""
-                      class="card-img"
-                    />
-                    <div class="card-img-overlay">
-                      <h3 class="card-title">Assaggia tè</h3>
-                      <p class="card-text small">Tutti i martedì</p>
-                    </div>
-                  </div>
-                  <div class="card-body d-flex flex-column text-dark">
-                    <p class="card-text flex-grow-1">
-                      Porta i tuoi tè preferiti e condividili con chi vuole
-                      provarli
-                    </p>
-                    <div><i class="bi-pin-angle-fill"></i> Via Zenzero, 14</div>
-                    <div><i class="bi-watch"></i> 11:00</div>
-                    <button
-                      class="btn btn-primary mt-3"
-                      type="button"
-                      data-bs-toggle="modal"
-                      data-bs-target="#mymodal"
-                    >
-                      Prenota
-                    </button>
+            </div>
+            <div class="col-md-6">
+              <div class="card text-light h-100">
+                <div class="position-relative">
+                  <img src="img/eventi2.jpg" alt="" class="card-img" />
+                  <div class="card-img-overlay px-0">
+                    <h3 class="card-title bg-primary-alpha p-3">
+                      Cinema d'autore
+                    </h3>
                   </div>
                 </div>
-              </div>
-              <div class="col-md-4">
-                <div class="card text-light h-100">
-                  <div class="position-relative">
-                    <img
-                      src="img/placeholder-img.png"
-                      alt=""
-                      class="card-img"
-                    />
-                    <div class="card-img-overlay">
-                      <h3 class="card-title">Karaoke</h3>
-                      <p class="card-text small">Tutti i giorni</p>
-                    </div>
+                <div class="card-body d-flex flex-column text-dark">
+                  <p class="card-text flex-grow-1">
+                    Film d’autore interamente autoprodotti dai nostri registi.
+                    Il tema della settimana è: la storia di Oasis, dalle origini
+                    all grande promessa per il futuro
+                  </p>
+                  <div><i class="bi-pin-angle-fill"></i> Via Artem, 8</div>
+                  <div>
+                    <i class="bi-watch"></i>Sabato 2 dicembre <br />17.00 -
+                    19.00
                   </div>
-                  <div class="card-body d-flex flex-column text-dark">
-                    <p class="card-text flex-grow-1">
-                      Vuoi cantare a squarcia gola con gli amici? Prova il
-                      nostro Karaoke
-                    </p>
-                    <div><i class="bi-pin-angle-fill"></i> Via Abba, 21</div>
-                    <div><i class="bi-watch"></i> 20:00 - 00:00</div>
-                    <button
-                      class="btn btn-primary mt-3"
-                      type="button"
-                      data-bs-toggle="modal"
-                      data-bs-target="#mymodal"
-                    >
-                      Prenota
-                    </button>
-                  </div>
+                  <button
+                    class="btn btn-primary mt-3"
+                    type="button"
+                    data-bs-toggle="modal"
+                    data-bs-target="#mymodal"
+                  >
+                    Prenota
+                  </button>
                 </div>
               </div>
-              <div class="col-md-4">
-                <div class="card text-light h-100">
-                  <div class="position-relative">
-                    <img
-                      src="img/placeholder-img.png"
-                      alt=""
-                      class="card-img"
-                    />
-                    <div class="card-img-overlay">
-                      <h3 class="card-title">Pittura con noi</h3>
-                      <p class="card-text small">Tutti i sabati</p>
-                    </div>
-                  </div>
-                  <div class="card-body d-flex flex-column text-dark">
-                    <p class="card-text flex-grow-1">
-                      Porta i tuoi bambini a colorare con noi alcune pareti
-                      della cupola
-                    </p>
-                    <div><i class="bi-pin-angle-fill"></i> Via Giallo, 10</div>
-                    <div><i class="bi-watch"></i> 11:00</div>
-                    <button
-                      class="btn btn-primary mt-3"
-                      type="button"
-                      data-bs-toggle="modal"
-                      data-bs-target="#mymodal"
-                    >
-                      Prenota
-                    </button>
+            </div>
+            <div class="col-md-6">
+              <div class="card text-light h-100">
+                <div class="position-relative">
+                  <img src="img/eventi3.jpg" alt="" class="card-img" />
+                  <div class="card-img-overlay px-0">
+                    <h3 class="card-title bg-primary-alpha p-3">
+                      Preghiamo insieme
+                    </h3>
                   </div>
                 </div>
+                <div class="card-body d-flex flex-column text-dark">
+                  <p class="card-text flex-grow-1">
+                    Ogni settimana diamo ai nostri cittadini la possibilità di
+                    frequentare l’area dedicata al culto della Sorgente nel
+                    quartiere Burocrasis, per ritrovare la propria spiritualità
+                  </p>
+                  <div>
+                    <i class="bi-pin-angle-fill"></i> Piazza Simulacro, 3
+                  </div>
+                  <div>
+                    <i class="bi-watch"></i>Ogni domenica <br />6.00 - 00.00
+                  </div>
+                  <button
+                    class="btn btn-primary mt-3"
+                    type="button"
+                    data-bs-toggle="modal"
+                    data-bs-target="#mymodal"
+                  >
+                    Prenota
+                  </button>
+                </div>
               </div>
-              <div class="col-md-4">
-                <div class="card text-light h-100">
-                  <div class="position-relative">
-                    <img
-                      src="img/placeholder-img.png"
-                      alt=""
-                      class="card-img"
-                    />
-                    <div class="card-img-overlay">
-                      <h3 class="card-title">Cascate di Oasis</h3>
-                      <p class="card-text small">Tutti i giorni</p>
-                    </div>
+            </div>
+
+            <div class="col-md-6">
+              <div class="card text-light h-100">
+                <div class="position-relative">
+                  <img src="img/eventi4.jpg" alt="" class="card-img" />
+                  <div class="card-img-overlay px-0">
+                    <h3 class="card-title bg-primary-alpha p-3">
+                      Conferenze sulla fertilità
+                    </h3>
                   </div>
-                  <div class="card-body d-flex flex-column text-dark">
-                    <p class="card-text flex-grow-1">
-                      Le cascate sono lo spettacolo migliore dei tuoi prossimi
-                      anni. Visitale!
-                    </p>
-                    <div><i class="bi-pin-angle-fill"></i> Via Monti</div>
-                    <div><i class="bi-watch"></i> 24h</div>
-                    <button
-                      class="btn btn-primary mt-3"
-                      type="button"
-                      data-bs-toggle="modal"
-                      data-bs-target="#mymodal"
-                    >
-                      Prenota
-                    </button>
+                </div>
+                <div class="card-body d-flex flex-column text-dark">
+                  <p class="card-text flex-grow-1">
+                    È necessario fare figli in quest’epoca storica? Questo ciclo
+                    di conferenze organizzato dai nostri luminari della
+                    ginecologia ti convincerà che la risposta è sì
+                  </p>
+                  <div><i class="bi-pin-angle-fill"></i> Via Fetus, 69</div>
+                  <div>
+                    <i class="bi-watch"></i> Ogni giovedì <br />16.30 - 18.30
                   </div>
+                  <button
+                    class="btn btn-primary mt-3"
+                    type="button"
+                    data-bs-toggle="modal"
+                    data-bs-target="#mymodal"
+                  >
+                    Prenota
+                  </button>
                 </div>
               </div>
             </div>
