Modified bg color in hero-content

--- a/eventi.html
+++ b/eventi.html
@@ -142,7 +142,7 @@
         class="hero d-flex align-items-center justify-content-start"
         id="hero-eventi"
       >
-        <div class="hero-content bg-primary p-4 ps-5 text-light w-75">
+        <div class="hero-content bg-tertiary p-4 ps-5 text-light w-75">
           <h1>Partecipa ai nostri eventi</h1>
           <h2 class="lead">
             Ad Oasis non c'è tempo per annoiarsi. Offriamo eventi non-stop per
