--- a/formazione.html
+++ b/formazione.html
@@ -142,7 +142,7 @@
         class="hero d-flex justify-content-center align-items-center"
         id="hero-formazione"
       >
-        <div class="hero-content text-light text-center">
+        <div class="hero-content bg-tertiary text-light text-center">
           <h1 class="display-1">Oasis</h1>
           <h2 class="lead">La culla del tuo futuro</h2>
           <button class="btn btn-primary mt-3">Unisciti a noi</button>
