--- a/index.html
+++ b/index.html
@@ -146,6 +146,7 @@
         <div
           class="
             hero-content
+            bg-tertiary
             d-flex
             flex-column
             justify-content-center
