--- a/benessere.html
+++ b/benessere.html
@@ -144,7 +144,7 @@
         class="hero d-flex align-items-center justify-content-start"
         id="hero-benessere"
       >
-        <div class="hero-content bg-primary p-4 ps-5 text-light w-75">
+        <div class="hero-content bg-tertiary p-4 ps-5 text-light w-75">
           <h1>Servizio Benessere</h1>
           <h2 class="lead">
             La nostra priorità è il tuo benessere mentale. Siamo o non siamo
@@ -237,7 +237,7 @@
                   faranno dimenticare ogni dolore. Ritrova la connessione con il
                   tuo corpo e sarai libero dalle catene del passato.
                 </p>
-              </v>
+              </div>
             </div>
           </div>
         </div>
