--- a/descrizione.html
+++ b/descrizione.html
@@ -144,7 +144,7 @@
         class="hero d-flex align-items-center justify-content-start"
         id="hero-unisciti"
       >
-        <div class="hero-content bg-primary p-4 ps-5 text-light w-75">
+        <div class="hero-content bg-tertiary p-4 ps-5 text-light w-75">
           <h1>Descrizione</h1>
           <h2 class="lead">
             Scopri la città dove i tuoi figli cresceranno e faranno parte
