--- a/servizi.html
+++ b/servizi.html
@@ -144,7 +144,7 @@
         class="hero d-flex align-items-center justify-content-start"
         id="hero-storia"
       >
-        <div class="hero-content bg-primary p-4 ps-5 text-light w-75">
+        <div class="hero-content bg-tertiary p-4 ps-5 text-light w-75">
           <h1>I servizi migliori</h1>
           <p class="lead">
             Per farti dimenticare qualsiasi problema e renderti utile alla
