--- a/servizi.html
+++ b/servizi.html
@@ -142,7 +142,7 @@
     <main class="pb-5">
       <section
         class="hero d-flex align-items-center justify-content-start"
-        id="hero-storia"
+        id="hero-servizi"
       >
         <div class="hero-content bg-tertiary p-4 ps-5 text-light w-75">
           <h1>I servizi migliori</h1>
