--- a/descrizione.html
+++ b/descrizione.html
@@ -142,7 +142,7 @@
     <main>
       <section
         class="hero d-flex align-items-center justify-content-start"
-        id="hero-unisciti"
+        id="hero-descrizione"
       >
         <div class="hero-content bg-tertiary p-4 ps-5 text-light w-75">
           <h1>Descrizione</h1>
@@ -167,7 +167,7 @@
             "
           >
             <div class="col-md col-lg-5 text-center">
-              <img class="img-fluid mb-3" src="img/Image350.png" alt="" />
+              <img class="img-fluid mb-3" src="img/img_desc1.jpg" alt="" />
             </div>
             <div class="col-md col-lg-5">
               <h3>Sorgensis</h3>
@@ -194,7 +194,7 @@
             "
           >
             <div class="col-md col-lg-5 text-center">
-              <img class="img-fluid mb-3" src="img/Image350.png" alt="" />
+              <img class="img-fluid mb-3" src="img/img_desc2.jpg" alt="" />
             </div>
             <div class="col-md col-lg-5">
               <h3>Centrisis</h3>
@@ -217,7 +217,7 @@
             "
           >
             <div class="col-md col-lg-5 text-center">
-              <img class="img-fluid mb-3" src="img/Image350.png" alt="" />
+              <img class="img-fluid mb-3" src="img/img_desc3.jpg" alt="" />
             </div>
             <div class="col-md col-lg-5">
               <h3>Burocrasis</h3>
@@ -235,7 +235,7 @@
 
       <section>
         <h2 class="text-center mb-5">Dove siamo</h2>
-        <img class="img-fluid w-100" src="img/placeholder-img.png" alt="" />
+        <img class="img-fluid w-100" src="img/img_desc4.jpg" alt="" />
       </section>
     </main>
 
