--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
         <div class="container py-5">
           <div class="row align-items-center gy-5 gx-5">
             <div class="col-md text-center">
-              <img src="./img/placeholder-img.png" alt="" />
+              <img src="./img/img_home1.jpg" alt="" />
             </div>
             <div class="col-md">
               <h2 class="">Una nuova città</h2>
@@ -196,7 +196,7 @@
         <div class="container py-5">
           <div class="row flex-md-row-reverse align-items-center gy-5 gx-5">
             <div class="col-md text-center">
-              <img src="./img/placeholder-img.png" alt="" />
+              <img src="./img/img_home2.jpg" alt="" />
             </div>
             <div class="col-md">
               <h2 class="">Le nostre origini</h2>
@@ -232,10 +232,14 @@
           >
             <div class="col-lg-6">
               <div class="composition-servizi clearfix">
-                <img class="img-fluid float-start" src="./img/3.jpg" alt="" />
+                <img
+                  class="img-fluid float-start"
+                  src="./img/img_home4.png"
+                  alt=""
+                />
                 <img
                   class="img-fluid float-end"
-                  src="./img/placeholder-img.png"
+                  src="./img/img_home3.jpg"
                   alt=""
                 />
               </div>
@@ -286,7 +290,7 @@
             <div class="col-md-4">
               <div class="card text-light h-100">
                 <div class="position-relative">
-                  <img src="img/placeholder-img.png" alt="" class="card-img" />
+                  <img src="img/img_home5.jpg" alt="" class="card-img" />
                   <div class="card-img-overlay">
                     <h3 class="card-title">Sorgente di vita</h3>
                     <p class="card-text small">Venerdì 17 novembre</p>
@@ -298,7 +302,7 @@
             <div class="col-md-4">
               <div class="card text-light h-100">
                 <div class="position-relative">
-                  <img src="img/placeholder-img.png" alt="" class="card-img" />
+                  <img src="img/img_home6.jpg" alt="" class="card-img" />
                   <div class="card-img-overlay">
                     <h3 class="card-title">Cinema d'autore</h3>
                     <p class="card-text small">Sabato 2 dicembre</p>
@@ -310,7 +314,7 @@
             <div class="col-md-4">
               <div class="card text-light h-100">
                 <div class="position-relative">
-                  <img src="img/placeholder-img.png" alt="" class="card-img" />
+                  <img src="img/img_home7.jpg" alt="" class="card-img" />
                   <div class="card-img-overlay">
                     <h3 class="card-title">Preghiamo insieme</h3>
                     <p class="card-text small">Ogni domenica</p>
