--- a/storia.html
+++ b/storia.html
@@ -154,7 +154,7 @@
         <div class="container pt-5">
           <div class="row align-items-md-center">
             <div class="col-md-5 text-center">
-              <img class="img-fluid" src="img/Image350.png" alt="" />
+              <img class="img-fluid" src="img/img_storia1.jpg" alt="" />
             </div>
             <div
               class="col-md-2 pt-5 pt-md-0 align-self-stretch year-container"
@@ -185,7 +185,7 @@
         <div class="container pt-5">
           <div class="row flex-md-row-reverse align-items-md-center">
             <div class="col-md-5 text-center">
-              <img class="img-fluid" src="img/Image350.png" alt="" />
+              <img class="img-fluid" src="img/img_storia2.jpg" alt="" />
             </div>
             <div
               class="col-md-2 pt-5 pt-md-0 align-self-stretch year-container"
@@ -218,7 +218,7 @@
         <div class="container pt-5">
           <div class="row align-items-md-center">
             <div class="col-md-5 text-center">
-              <img class="img-fluid" src="img/Image350.png" alt="" />
+              <img class="img-fluid" src="img/img_storia3.jpg" alt="" />
             </div>
             <div
               class="col-md-2 pt-5 pt-md-0 align-self-stretch year-container"
@@ -245,7 +245,7 @@
         <div class="container pt-5">
           <div class="row flex-md-row-reverse align-items-md-center">
             <div class="col-md-5 text-center">
-              <img class="img-fluid" src="img/Image350.png" alt="" />
+              <img class="img-fluid" src="img/img_storia4.jpg" alt="" />
             </div>
             <div
               class="col-md-2 pt-5 pt-md-0 align-self-stretch year-container"
@@ -274,7 +274,7 @@
         <div class="container pt-5">
           <div class="row flex-md-row align-items-md-center">
             <div class="col-md-5 text-center">
-              <img class="img-fluid" src="img/Image350.png" alt="" />
+              <img class="img-fluid" src="img/img_storia5.jpg" alt="" />
             </div>
             <div
               class="col-md-2 pt-5 pt-md-0 align-self-stretch year-container"
