--- a/unisciti.html
+++ b/unisciti.html
@@ -169,7 +169,7 @@
             "
           >
             <div class="col-md col-lg-5 text-center">
-              <img class="img-fluid" src="img/Image350.png" alt="" />
+              <img class="img-fluid" src="img/img_unisciti1.jpg" alt="" />
             </div>
             <!-- passaggi -->
             <div class="col-md col-lg-5">
