--- a/servizi.html
+++ b/servizi.html
@@ -153,12 +153,16 @@
         </div>
       </section>
 
-      <section>
+      <section class="mb-5">
         <div class="container pt-5">
           <div class="row gy-5 gy-md-0 gx-md-5 justify-content-around">
             <div class="col-md-5 d-flex flex-column justify-content-between">
               <div>
-                <img src="img/Image455.png" class="img-fluid mb-4" alt="..." />
+                <img
+                  src="img/img_servizi1.jpg"
+                  class="img-fluid mb-4"
+                  alt="..."
+                />
 
                 <h3>Benessere</h3>
                 <p>
@@ -177,7 +181,11 @@
 
             <div class="col-md-5 d-flex flex-column justify-content-between">
               <div>
-                <img src="img/Image455.png" class="img-fluid mb-4" alt="..." />
+                <img
+                  src="img/img_servizi2.jpg"
+                  class="img-fluid mb-4"
+                  alt="..."
+                />
 
                 <h3>Formazione</h3>
                 <p>
@@ -196,28 +204,28 @@
         </div>
       </section>
 
-      <section>
+      <section class="bg-primary">
         <div class="container pt-5">
           <h2 class="text-center">Altri servizi</h2>
           <div class="row gy-3 pt-4">
             <div class="col text-center">
-              <img src="img/Image160.png" alt="" />
+              <img src="img/icona_servizi1.png" alt="" />
               <p>Pulizia dell'aria</p>
             </div>
             <div class="col text-center">
-              <img src="img/Image160.png" alt="" />
+              <img src="img/icona_servizi2.png" alt="" />
               <p>Acqua potabile</p>
             </div>
             <div class="col text-center">
-              <img src="img/Image160.png" alt="" />
+              <img src="img/icona_servizi3.png" alt="" />
               <p>Guardie della diciplina</p>
             </div>
             <div class="col text-center">
-              <img src="img/Image160.png" alt="" />
+              <img src="img/icona_servizi4.png" alt="" />
               <p>Paesaggi naturali</p>
             </div>
             <div class="col text-center">
-              <img src="img/Image160.png" alt="" />
+              <img src="img/icona_servizi5.png" alt="" />
               <p>Cura della prole</p>
             </div>
           </div>
