--- a/servizi.html
+++ b/servizi.html
@@ -139,7 +139,7 @@
       </div>
     </header>
 
-    <main class="pb-5">
+    <main>
       <section
         class="hero d-flex align-items-center justify-content-start"
         id="hero-servizi"
