Checked every image was img-fluid

--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
         <div class="container py-5">
           <div class="row align-items-center gy-5 gx-5">
             <div class="col-md text-center">
-              <img src="./img/img_home1.jpg" alt="" />
+              <img class="img-fluid" src="./img/img_home1.jpg" alt="" />
             </div>
             <div class="col-md">
               <h2 class="">Una nuova città</h2>
@@ -196,7 +196,7 @@
         <div class="container py-5">
           <div class="row flex-md-row-reverse align-items-center gy-5 gx-5">
             <div class="col-md text-center">
-              <img src="./img/img_home2.jpg" alt="" />
+              <img class="img-fluid" src="./img/img_home2.jpg" alt="" />
             </div>
             <div class="col-md">
               <h2 class="">Le nostre origini</h2>
