--- a/servizi.html
+++ b/servizi.html
@@ -209,23 +209,23 @@
           <h2 class="text-center">Altri servizi</h2>
           <div class="row gy-3 pt-4">
             <div class="col text-center">
-              <img src="img/icona_servizi1.png" alt="" />
+              <img class="img-fluid" src="img/icona_servizi1.png" alt="" />
               <p>Pulizia dell'aria</p>
             </div>
             <div class="col text-center">
-              <img src="img/icona_servizi2.png" alt="" />
+              <img class="img-fluid" src="img/icona_servizi2.png" alt="" />
               <p>Acqua potabile</p>
             </div>
             <div class="col text-center">
-              <img src="img/icona_servizi3.png" alt="" />
+              <img class="img-fluid" src="img/icona_servizi3.png" alt="" />
               <p>Guardie della diciplina</p>
             </div>
             <div class="col text-center">
-              <img src="img/icona_servizi4.png" alt="" />
+              <img class="img-fluid" src="img/icona_servizi4.png" alt="" />
               <p>Paesaggi naturali</p>
             </div>
             <div class="col text-center">
-              <img src="img/icona_servizi5.png" alt="" />
+              <img class="img-fluid" src="img/icona_servizi5.png" alt="" />
               <p>Cura della prole</p>
             </div>
           </div>
