added a paragraph in descrizione

--- a/descrizione.html
+++ b/descrizione.html
@@ -195,6 +195,13 @@
 
       <section>
         <h2 class="text-center mb-5">Dove siamo</h2>
+        <p>
+          OASIS si trova nel mezzo del Deserto Occidentale, ma la sua posizione
+          è e deve rimanere strettamente segreta per impedire che venga
+          saccheggiata o attaccata dagli abitanti del Mondo Esterno in lotta
+          contro il nosro sistema elitario. Se sei interessato a raggiungerci e
+          ad abitare nella Culla del Tuo Futuro inviaci il form compilato.
+        </p>
         <img class="img-fluid w-100" src="img/img_desc4.jpg" alt="" />
       </section>
     </main>
